Add Rust bindings for FastLanes core (#31)

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,25 @@ cmake-build-python/
 *.egg-info/
 dist/
 build/
+
+# ─────────────────────────────────────────────────────────────
+# Rust build artifacts & lockfile
+# ─────────────────────────────────────────────────────────────
+
+# Everything in any target/ folder
+target/
+
+# If you ever run `cargo install --path .` it creates this
+.cargo/
+
+# Don’t commit the crate’s lockfile (library convention)
+rust/Cargo.lock
+
+# VSCode’s Rust extension
+.vscode/
+
+# Rustfmt
+rustfmt.toml
+
+# Coverage reports
+coverage/
