--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ add_compile_definitions(NOMINMAX)
 
 # Project : ------------------------------------------------------------------------------------------------------------
 project(FastLanes)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -106,7 +108,7 @@ option(FLS_BUILD_BENCHMARKING "Enable Benchmark Build" OFF)
 option(FLS_BUILD_EXAMPLES "Build Examples" OFF)
 option(FLS_BUILD_GPU "Build GPU" OFF)
 option(FLS_BUILD_GTEST "Build GTEST" OFF)
-option(FLS_ENABLE_CLANG_TIDY "Enable clang_tidy on all targets" ON)
+option(FLS_ENABLE_CLANG_TIDY "Enable clang_tidy on all targets" OFF)
 option(FLS_ENABLE_IWYU "Enable include-what-you-use tool" OFF)
 option(FLS_ENABLE_DOC "Enable Doc build" OFF)
 option(FLS_ENABLE_TABLE_LOG "Enable Table Log" OFF)
@@ -171,9 +173,6 @@ if (true)
     # Include : --------------------------------------------------------------------------------------------------------
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-    # External Include: -----------------------------------------------------------------------------------------------------
-    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/flatbuffers)
-
     # Primitives: ------------------------------------------------------------------------------------------------------
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/primitives)
 
@@ -191,6 +190,16 @@ if (true)
             EXPORT FLSTargets
             FILE "${CMAKE_BINARY_DIR}/FLSTargets.cmake"
             NAMESPACE FLS::
+    )
+
+    install(
+            DIRECTORY
+            ${CMAKE_SOURCE_DIR}/include/     # your "include/fls/…" tree
+            DESTINATION
+            include                           # will land under <prefix>/include/fls/…
+            FILES_MATCHING
+            PATTERN "*.h"
+            PATTERN "*.hpp"
     )
 
 endif ()
@@ -258,30 +267,10 @@ if (FLS_ENABLE_IWYU)
     endif ()
 endif ()
 
+# Verbose : ------------------------------------------------------------------------------------------------------------
 if (FLS_ENABLE_VERBOSE_OUTPUT)
-    message("---------------------------------------------------------------------------------------------------------")
-    message("-- FLS: Verbose Enabled:")
-
-    cmake_print_variables(
-            CMAKE_SYSTEM_PROCESSOR
-            CMAKE_SYSTEM_NAME
-            CMAKE_VERSION
-            CMAKE_BUILD_TYPE
-            CMAKE_CXX_COMPILER
-            CMAKE_CXX_COMPILER_VERSION
-            CMAKE_CXX_STANDARD
-            CMAKE_SYSTEM
-            CMAKE_HOST_SYSTEM_NAME
-            CMAKE_HOST_SYSTEM_PROCESSOR
-            CMAKE_GENERATOR
-            CMAKE_BINARY_DIR
-            CMAKE_SOURCE_DIR
-            CMAKE_LINKER
-            CMAKE_CXX_FLAGS
-            CMAKE_C_FLAGS
-            CMAKE_CROSSCOMPILING
-            CMAKE_CXX_FLAGS_DEBUG
-    )
+    include(verbose_options)
+    print_verbose_options()
 endif ()
 
 # Benchmark : ----------------------------------------------------------------------------------------------------------
@@ -345,7 +334,7 @@ if (EXISTS "${CMAKE_SOURCE_DIR}/playground/CMakeLists.txt")
 endif ()
 # Python : -------------------------------------------------------------------------------------------------------------
 if (FLS_BUILD_PYTHON)
-    message("-------------------------------------------------------------")
+    message("----------------------------------------------------------------------------------------------------------")
     message("- FLS: Building FastLanes Python Extension")
 
     add_subdirectory(python)   # your module’s CMakeLists.txt
