--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -27,11 +27,17 @@ jobs:
         working-directory: examples/fetch_content_example
         run: |
           mkdir -p build && cd build
+          
+          # print what we’re about to fetch
+          echo "FASTLANES repository: ${{ github.event.pull_request.head.repo.clone_url || format('https://github.com/{0}.git', github.repository) }}"
+          echo "FASTLANES tag/commit: ${{ github.event.pull_request.head.sha || github.sha }}"
+          
           cmake .. \
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
             -DFLS_ENABLE_VERBOSE_OUTPUT=ON \
+            -DFASTLANES_REPOSITORY=${{ github.event.pull_request.head.repo.clone_url || format('https://github.com/{0}.git', github.repository) }} \
             -DFASTLANES_TAG=${{ github.event.pull_request.head.sha || github.sha }}
           cmake --build . --parallel
 
