--- a/test/src/dataset_tests/CMakeLists.txt
+++ b/test/src/dataset_tests/CMakeLists.txt
@@ -6,7 +6,8 @@ add_executable(
         issue.cpp
         issues.cpp
         public_bi.cpp
-        nextiajd_test.cpp)
+        nextiajd_test.cpp
+        tpch.cpp)
 
 target_link_libraries(dataset_tests PUBLIC gtest_main gmock_main FastLanes)
 gtest_discover_tests(dataset_tests DISCOVERY_TIMEOUT 60)
