Add native DATE type support with epoch-based encoding (#38)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory(reader)
 add_subdirectory(std)
 add_subdirectory(stt)
 add_subdirectory(table)
+add_subdirectory(types)
 add_subdirectory(utl)
 add_subdirectory(wizard)
 
