--- a/test/src/unit_tests/CMakeLists.txt
+++ b/test/src/unit_tests/CMakeLists.txt
@@ -4,6 +4,10 @@ add_executable(unit_test
         json_test.cpp
         decimal_test.cpp
         parse_integer_test.cpp
+        parse_timestamp_test.cpp
+        parse_timestamp_12hour_test.cpp
+        parse_timestamp_with_offset_test.cpp
+        parse_timestamp_zulu_test.cpp
         sampling_layout_test.cpp
 )
 
