--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(dataset_tests)
 add_subdirectory(expression_tests)
 add_subdirectory(fls_reader_tests)
+add_subdirectory(primitive_tests)
 add_subdirectory(unit_tests)
 
