--- a/test/src/expression_tests/CMakeLists.txt
+++ b/test/src/expression_tests/CMakeLists.txt
@@ -18,9 +18,13 @@ add_executable(test_fsst_expr fsst_test.cpp)
 target_link_libraries(test_fsst_expr PUBLIC gtest_main gmock_main FastLanes)
 add_test(NAME test_fsst_expr COMMAND $<TARGET_FILE:test_fsst_expr>)
 
+add_executable(test_uncompressed uncompressed_test.cpp)
+target_link_libraries(test_uncompressed PUBLIC gtest_main gmock_main FastLanes)
+add_test(NAME test_uncompressed COMMAND $<TARGET_FILE:test_uncompressed>)
+
 fls_enable_sanitizers(test_frequency)
 fls_enable_sanitizers(test_rle)
 fls_enable_sanitizers(test_cross_rle)
 fls_enable_sanitizers(test_alp)
 fls_enable_sanitizers(test_fsst_expr)
-
+fls_enable_sanitizers(test_uncompressed)
