Add Native Boolean Data Type & VALIDITY_MASK Expression (#48)

--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(fls_expression
         selection_ds.cpp
         slpatch_operator.cpp
         transpose_operator.cpp
+        validitymask_operator.cpp
 )
 
 if (FLS_ENABLE_IWYU)
