--- a/test/src/unit_tests/CMakeLists.txt
+++ b/test/src/unit_tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(unit_test
         parse_timestamp_with_offset_test.cpp
         parse_timestamp_zulu_test.cpp
         sampling_layout_test.cpp
+        validitymask.cpp
 )
 
 target_link_libraries(unit_test
