Fix infinite loop on trailing delimiters when parsing CSV (#56)

--- a/test/src/unit_tests/CMakeLists.txt
+++ b/test/src/unit_tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(unit_test
+        csv_parser_trailing_delimiter_test.cpp
         csv_reader_test.cpp
         double_test.cpp
         json_test.cpp
